--- a/style.css
+++ b/style.css
@@ -26,3 +26,53 @@
   text-decoration:underline;
   font-weight: bold;
 }
+
+.article-intro{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 28px;
+  margin-left: 12%;
+  text-align: justify;
+}
+
+.article-essentiel{
+  
+  border-radius: 50px;
+  border-radius: 20px;
+  background: #e8ebed;
+  box-shadow:  -26px 26px 52px #d3d6d8, 
+               26px -26px 52px #fdffff;
+  width: 50%;
+}
+
+.title-essentiel{
+  display: flex;
+  color: blueviolet;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
+  padding-top: 20px;
+  
+}
+
+.article-essentiel ul > li{
+  text-decoration: none;
+  
+}
+.second-section{
+  background-color: rgb(202, 77, 165);
+  
+}
+
+.section-trois{
+  background-color: rgb(146, 177, 235);
+}
+
+section article > .enfant{
+ margin-left: 20%;
+}
+section article > .parents{
+  margin-left: 50%;
+}
+.footer{
+  background-color: rgb(44, 14, 20);
+}
